--- a/my_bootcamp/templates/base.html
+++ b/my_bootcamp/templates/base.html
@@ -97,6 +97,16 @@
 			  $('#rating_hide').hide();
 			});
 		  });
+		  $(document).ready(function(){
+			$("#home_sidebar").click(function(){
+			  $("#sidebar_div").slideDown();
+			});
+		  });
+		  $(document).ready(function(){
+			$("#user_sidebar").click(function(){
+			  $("#sidebar_div").slideDown();
+			});
+		  });
 		</script>
 		{% tailwind_css %}
 	</head>
