--- a/my_bootcamp/templates/Footer/Footer.html
+++ b/my_bootcamp/templates/Footer/Footer.html
@@ -1,50 +1,21 @@
 <footer class='text-slate-300 bg-slate-900 text-center w-full items-center'>
         
-        <div class='flex flex-row sm:justify-left md:justify-left lg:justify-left xl:justify-center 2xl:justify-center gap-2  mt-4  overflow-x-scroll no-scrollbar'>
-                <a href=''>
-                        <div class='flex-1 bg-slate-800  h-24 w-34 rounded-lg py-6 border border-violet-700 sm:px-2'>
-                                <span class='text-xs'>About-Usgfgfgfgfg</span>
-                        </div>
-                </a>
-                <a href=''>
-                        <div class='flex-1 bg-slate-800  h-24 w-34 rounded-lg py-6 border border-violet-700 sm:px-2'>
-                                <span class='text-xs'>About-Us jnngskkljbkks</span>
-                        </div>
-                </a>
-                <a href=''>
-                        <div class='flex-1 bg-slate-800 h-24 w-34 rounded-lg py-6 border border-violet-700  sm:px-2'>
-                                <span class='text-xs'>Contact-Us</span>
-                        </div>
-                </a>
-                <a href=''>
-                        <div class='flex-1 bg-slate-800 h-24 w-34 rounded-lg  py-6 border border-violet-700 sm:px-2'>
-                                <span class='text-xs'>Disclaimerjgkjdfhkjhjlkjklgjklnjgnjkjnklklnlknjblk</span>
-                        </div>
-                </a>
-                <a href=''>
-                        <div class='flex-1 bg-slate-800  h-24 w-34 rounded-lg py-6 border border-violet-700  sm:px-2'>
-                                <span class='text-xs'>Privacy-Policy</span>
-                        </div>
-                </a>
-                <a href=''>
-                        <div class='flex-1 bg-slate-800  h-24 w-34 rounded-lg py-6 border border-violet-700 sm:px-2'>
-                                <span class='text-xs'>About-Usjdjkfdfklfdkjhkldjklhjgkljkglj</span>
-                        </div>
-                </a>
-        </a>
+<div class='flex'>
         <a href=''>
-                <div class='flex-1 bg-slate-800  h-24 w-34 rounded-lg py-6 border border-violet-700  sm:px-2'>
-                        <span class='text-xs'>Privacy-Policy</span>
-                </div>
-        </a>
-        <a href=''>
-                <div class='flex-1 bg-slate-800  h-24 w-34 rounded-lg py-6 border border-violet-700 sm:px-2'>
-                        <span class='text-xs'>About-Ushsghjghjfgjdfjjhfjh</span>
-                </div>
-        </a>
-</div><br/>
-<span class='bg-clip-text text-xl lg:text-4xl text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>TutorsCloud</span><br/>
+        <div class='flex-1 text-center w-full text-xl py-20  w-34'>
+                <h2 class='text-2xl font-mono font-extrabold'>Come teach with us</h2>
+                <p>Become an instructor and change lives — including your own</p>
+                <p>
+                        <a href='{% url "join-now" %}'>
+                        <button class='bg-blue-700 rounded-sm border border-blue-200 p-2  w-72 my-4'>Get Started</button>
+                        </a>    
+                </p>
+        </div>
+        </a>    
+                
 </div>
+<div>
+<span class='bg-clip-text text-xl lg:text-4xl text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>TutorsCloud</span><br/>
 </div>
 <div class='text-slate-400 px-4 text-center'>
         <h3 class='font-semibold text-lg '>Connect With Us</h3>
