--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -153,7 +153,7 @@
                 <li>
                 <p class=' text-lg text-left text-violet-700 py-1 my-2'>
                     <form action="{% url "home-page" %}" method='get' class=''>
-                    <button type='submit' class=' p-2' name='category_like'>
+                    <button type='submit' class=' p-2' name='category_like' value='category_like'>
                     Liked Videos
                     <button>
                     </form>
@@ -162,7 +162,7 @@
                 <li>
                 <p class=' text-lg text-left text-violet-700 py-1 my-2'>
                     <form action="{% url "home-page" %}" method='get' class=''>
-                    <button type='submit' class=' p-2' name='category_cart'>
+                    <button type='submit' class=' p-2' name='category_cart' value='category_cart'>
                     Cart Items 
                     <button>
                     </form>
@@ -171,7 +171,7 @@
                 <li>
                 <p class=' text-lg text-left text-violet-700 py-1 my-2'>
                     <form action="{% url "home-page" %}" method='get' class=''>
-                    <button type='submit' class=' p-2' name='category_rated'>
+                    <button type='submit' class=' p-2' name='category_rated' value='category_rated'>
                     Rated Items
                     <button>
                     </form>
@@ -180,7 +180,7 @@
                 <li>
                     <p class=' text-lg text-left text-violet-700 py-1 my-2'>
                         <form action="{% url "home-page" %}" method='get' class=''>
-                        <button type='submit' class=' p-2' name='category_purchased'>
+                        <button type='submit' class=' p-2' name='category_purchased' value='category_purchased'>
                         Enrolled Courses
                         <button>
                         </form>
@@ -189,7 +189,7 @@
                 <li>
                     <p class=' text-lg text-left text-violet-700 py-1 my-2'>
                         <form action="{% url "home-page" %}" method='get' class=''>
-                        <button type='submit' class=' p-2' name='category_posts'>
+                        <button type='submit' class=' p-2' name='category_posts' value='category_posts'>
                         Your Posts
                         <button>
                         </form>
